--- a/blogpost-template-main/_layouts/post.html
+++ b/blogpost-template-main/_layouts/post.html
@@ -1,11 +1,12 @@
 ---
 layout: default
+toc: true
 ---
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
-  {{ content }}
+  {{ content | toc }}
 </div>
 
 {% if site.related_posts.size >= 1 %}
